<resources>
    <string name="app_name">SwimPredictor</string>
    <string name="enter_50m_time">Enter 50m time</string>
    <string name="predict_results">\u0020Predict results!\u0020</string>
    <string name="title_clock">Clock</string>
    <string name="title_home">Home</string>
    <string name="title_database">Stored data</string>
    <string name="preference_file_key">SwimmingPreferences</string>
    <string name="play_pause_button_for_stopwatch">Play/pause button for stopwatch</string>
    <string name="reset_for_stopwatch">reset for stopwatch</string>
    <string name="time0">00:00:00</string>
    <string name="enter_data">\u0020Please enter your data:</string>
    <string name="empty_time">--:--,--</string>
    <string-array name="gender_spinner">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="age_spinner">
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
    </string-array>
    <string-array name="training_age_spinner">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
</resources>
