<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtTimer"
        android:text="@string/time0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/start_stop"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="85dp"
        android:src="@drawable/ic_play_arrow_50px"
        android:background="@drawable/round_button"
        app:layout_constraintTop_toBottomOf="@id/txtTimer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/play_pause_button_for_stopwatch" />

    <ImageButton
        android:id="@+id/reset"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_replay_24px"
        app:layout_constraintTop_toBottomOf="@id/txtTimer"
        android:layout_marginTop="85dp"
        app:layout_constraintLeft_toLeftOf="@id/start_stop"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/reset_for_stopwatch" />



</androidx.constraintlayout.widget.ConstraintLayout>